Update SimpleCache.java
bug fixes